# ChatWilly

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml
backend/: .pre-commit-config.yaml  config.yaml  main.py  pyproject.toml
backend/src/chatwilly_backend/: settings.py
backend/src/chatwilly_backend/api/: auth.py  lifespan.py  rate_limit.py  route_models.py  routes.py
backend/src/chatwilly_backend/graph/: __init__.py  agents.py  graph.py  output_models.py
backend/src/chatwilly_backend/prompt/: input_guardrail_prompt.py  response_agent_prompt.py
backend/src/chatwilly_backend/redis_bucket/: __init__.py  ttl_redis_bucket.py
backend/src/chatwilly_backend/scheduled_jobs/: cleanup_old_sessions.py
backend/src/chatwilly_backend/tools/: __init__.py  tools.py
backend/src/chatwilly_backend/vector_db/: __init__.py  embedding.py  retriever.py
backend/tests/chatwilly_backend/api/: test_routes.py
backend/tests/evals/: test_faithfulness.py
docker/: Dockerfile.backend
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/pages/: AboutPage.jsx  ChatPage.jsx
knowledge_base/: README.md  config.yaml  loader.py  processor.py  pyproject.toml
knowledge_base/src/chatwilly_knowledge/: settings.py
knowledge_base/src/chatwilly_knowledge/core/: categories.py  model.py  response.py  semantic_process.py
knowledge_base/src/chatwilly_knowledge/data/: extract_text.py
knowledge_base/src/chatwilly_knowledge/prompt/: processor_prompt.py
